force-app/main/default/objects/AI_Recommendation__c/AI_Recommendation__c.object-meta.xml
<CustomObject>
    <label>AI Recommendation</label>
    <nameField>
        <label>AI Recommendation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>