force-app/main/default/objects/AI_Recommendation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>AI Recommendations</relationshipLabel>
    <relationshipName>AI_Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>