force-app/main/default/objects/AI_Recommendation__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <label>Rank</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>