force-app/main/default/objects/AI_Recommendation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cross-Sell</fullName>
            </value>
            <value>
                <fullName>Up-Sell</fullName>
            </value>
            <value>
                <fullName>Similar</fullName>
                <default>true</default>
                <label>Similar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>