force-app/main/default/objects/AI_Recommendation__c/validationRules/Score_Range_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Score_Range_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  Score__c &lt; 0,
  Score__c &gt; 100
)</errorConditionFormula>
    <errorDisplayField>Score__c</errorDisplayField>
    <errorMessage>&quot;Score must be between 0 and 100&quot;</errorMessage>
</ValidationRule>